<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EditorFragment">
    <ImageView
        android:id="@+id/img_to_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btns_undo_redo"
        tools:src="@tools:sample/backgrounds/scenic"
        android:layout_width="0dp"
        android:layout_height="0dp"/>
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btns_undo_redo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editor_scrollview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_undo"
            app:icon="@drawable/ic_undo"
            app:iconTint="@color/md_theme_primary"
            app:iconSize="28dp"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_redu"
            app:icon="@drawable/ic_redu"
            app:iconTint="@color/md_theme_primary"
            app:iconSize="28dp"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>
    <HorizontalScrollView
        android:id="@+id/editor_scrollview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:weightSum="4"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_filter"
                android:text="@string/filter"
                app:icon="@drawable/ic_filter"
                app:iconGravity="top"
                app:iconSize="28dp"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_text"
                android:text="@string/text"
                app:icon="@drawable/ic_text"
                app:iconGravity="top"
                app:iconSize="28dp"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_crop"
                android:text="@string/crop"
                app:icon="@drawable/ic_crop"
                app:iconGravity="top"
                app:iconSize="28dp"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_brush"
                android:text="@string/brush"
                app:icon="@drawable/ic_brush"
                app:iconGravity="top"
                app:iconSize="28dp"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_emoji"
                android:text="@string/emoji"
                app:icon="@drawable/ic_emoji"
                app:iconGravity="top"
                app:iconSize="28dp"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_sticker"
                android:text="@string/sticker"
                app:icon="@drawable/ic_image"
                app:iconGravity="top"
                app:iconSize="28dp"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>