<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.editor.image.ui.fragments.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_first">
        <action
            android:id="@+id/toEditorFragment"
            app:destination="@id/EditorFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="image"
                app:argType="com.editor.image.models.Image"
                app:nullable="true"
                android:defaultValue="@null"/>
        </action>
        <action
            android:id="@+id/action_MainFragment_to_editorWallFragment2"
            app:destination="@id/editorWallFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>

    </fragment>
    <fragment
        android:id="@+id/EditorFragment"
        android:name="com.editor.image.ui.fragments.EditorFragment"
        android:label="@string/editor_fragment_label"
        tools:layout="@layout/fragment_editor">
        <argument
            android:name="image"
            app:argType="com.editor.image.models.Image"
            app:nullable="true"
            android:defaultValue="@null"/>
        <action
            android:id="@+id/toUploadFragment"
            app:destination="@id/uploadFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/MainFragment">
            <argument
                android:name="filePath"
                app:argType="string"
                app:nullable="true"
                android:defaultValue="@null"/>
            <argument
                android:name="originalImage"
                app:argType="string"
                app:nullable="true"
                android:defaultValue="@null"/>
        </action>
    </fragment>
    <fragment
        android:id="@+id/uploadFragment"
        tools:layout="@layout/fragment_upload"
        android:name="com.editor.image.ui.fragments.UploadFragment"
        android:label="@string/upload">
        <argument
            android:name="filePath"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>
        <argument
            android:name="originalImage"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null"/>
        <action
            android:id="@+id/toEditorWallFragment"
            app:destination="@id/editorWallFragment"
            app:popUpTo="@id/MainFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/editorWallFragment"
        tools:layout="@layout/fragment_editor_wall"
        android:name="com.editor.image.ui.fragments.EditorWallFragment"
        android:label="@string/editor_wall" >
        <action
            android:id="@+id/toEditorWallDetailFragment"
            app:destination="@id/editorWallDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="editorWallSimplified"
                app:argType="com.editor.image.models.EditorWallSimplified"
                app:nullable="true"
                android:defaultValue="@null" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/editorWallDetailFragment"
        android:name="com.editor.image.ui.fragments.EditorWallDetailFragment"
        tools:layout="@layout/fragment_editor_wall_detail"
        android:label="@string/images" >
        <argument
            android:name="editorWallSimplified"
            app:argType="com.editor.image.models.EditorWallSimplified"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>